2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* zebra_vty.c: (route_type_str) Remove obsolete function: use new
	  library function zebra_route_string() instead.  Note that there
	  are a few differences: for IPv6 routes, we now get "ripng" and
	  "ospf6" instead of the old behavior ("rip" and "ospf").
	  (route_type_char) Remove obsolete function: ues new library function
	  zebra_route_char() instead.  Note that there is one difference:
	  the old function returned 'S' for a ZEBRA_ROUTE_SYSTEM route,
	  whereas the new one returns 'X'.
	  (vty_show_ip_route_detail,vty_show_ipv6_route_detail) Replace
	  route_type_str() with zebra_route_string().
	  (vty_show_ip_route,vty_show_ipv6_route) Replace route_type_char()
	  with zebra_route_char().

2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* rt_netlink.c: (netlink_request) Use memset to clear structure
	  before calling sendto (eliminates a valgrind error message about
	  uninitialized data).

2005-09-28 Alain Ritoux <alain.ritoux@6wind.com>

	* zserv.c: Always provied distance for route add

2005-09-28 Alain Ritoux <alain.ritoux@6wind.com>

	* connected.c: flag connected_up_ipv6() and connected_down_ipv6()
	  usage with HAVE_IPV6

2005-09-24 Hasso Tepper <hasso at quagga.net>

	* rib.h: Add note about behaviour of rib_add_ipv[46]* functions -
	  add is treated as implicit withdraw.

2005-09-21 David Young <dyoung@ojctech.com>

	* zebra_rib.c: Reduce the height of some staircases. Fix
	  rib_delete_ipv6() to match routes in the RIB by their gateway as
	  well as by destination.

2005-09-21 Paul Jakma <paul.jakma@sun.com>

	* zebra_rib.c: (static_uninstall_ipv{4,6}) Fix regression wrt
	  removal of static routes with multiple-hops introduced with
	  the workqueue conversion. We should free the relevant
	  nexthop and then get rib_process to run, otherwise we just
	  get same static route back again (with no way to unconfigure